[package]
name = "irohtest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
data-encoding = "2.7.0"
futures-lite = "2.6.0"
iroh = "0.31.0"
iroh-gossip = "0.31.0"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = "1.43.1"
