[package]
name = "rustfagdag"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.27", features = ["derive"] }
futures-lite = "2.6.0"
iroh = "0.31.0"
iroh-gossip = "0.31.0"
ed25519-dalek = "2.1.1"
tokio = "1.43.0"
tracing-subscriber = "0.3.19"
rand = "0.8.5"
postcard = "1.1.1"
data-encoding = "2.7.0"
